unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation_Line__c/AcctSeed__Bank_Reconciliation_Line__c.object-meta.xml
<CustomObject>
    <description>The object has been deprecated and is no longer used.</description>
    <label>zDep-Bank Reconciliation Line</label>
    <nameField>
        <displayFormat>BankRecLine-{000000000}</displayFormat>
        <label>zDeprecated Bank Rec Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Reconciliation Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>