unpackaged/main/default/objects/AcctSeed__Bank_Reconciliation_Line__c/fields/AcctSeed__Transaction__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>AcctSeed__Transaction__c</referenceTo>
    <relationshipName>Bank_Reconciliation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>